--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <ul>
       <li><%= link_to t(".about"),   about_path %></li>
       <li><%= link_to t(".contact"), contact_path %></li>
-      <li><%= link_to t(".new"), Settings.links.news %></li>
+      <li><%= link_to t(".new"), Settings.externals.rails_news %></li>
     </ul>
   </nav>
 </footer>
