--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,4 +7,4 @@
 </div>
 
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
-                      Settings.links.rails_homepage %>
+                      Settings.externals.rails_home %>
