--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,24 @@
 <% provide :title, t(".label") %>
 <h1><%= t ".label" %></h1>
-<%= raw t ".description" %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with model: @user do |f| %>
+      <%= render "shared/error_messages" %>
+
+      <%= f.label :name, t(".user_name") %>
+      <%= f.text_field :name, class: "form-control" %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email, class: "form-control" %>
+
+      <%= f.label :password, t(".password") %>
+      <%= f.password_field :password, class: "form-control" %>
+
+      <%= f.label :password_confirmation, t(".password_confirmation") %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+
+      <%= f.submit t(".submit"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
