--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
             </a>
             <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to t(".profile"), current_user %></li>
-              <li><%= link_to t(".settings"), "#" %></li>
+              <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t(".sign_out"), logout_path,
