--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,27 @@
-<div class="center jumbotron">
-  <h1><%= t ".title" %></h1>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t ".feed" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".title" %></h1>
 
-  <h2><%= raw t ".description" %></h2>
+    <h2><%= raw t ".description" %></h2>
 
-  <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+    <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
-                      Settings.externals.rails_home %>
+  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+                        Settings.externals.rails_home %>
+<% end %>
